--- a/WEBISEP/design/categorie.css
+++ b/WEBISEP/design/categorie.css
@@ -2,6 +2,7 @@
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
+	position: relative;
 }
 h1{
 	text-align: center;
@@ -9,6 +10,9 @@ h1{
 	font-style: unset;
 	font-size: 40px;
 	font-variant: small-caps;
+}
+.topic {
+	position: relative;
 }
 /*titre*/
 .titre{
@@ -92,12 +96,15 @@ h2{
 }
 
 .titre:hover{
-	box-shadow: 5px -5px 29px 1px #888888;
+	box-shadow: 5px -5px 29px 1px #888888
 }
 .delete{
-        text-decoration: none;
-        color: red;
+	position: absolute;
+	right: 7px;
+	top: 7px;
+    text-decoration: none;
+    color: black;
 }
 .delete:hover{
-        color: blue;
+        color: red;
 }
