--- a/WEBISEP/design/Connexion.css
+++ b/WEBISEP/design/Connexion.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url(../image/connexion.jpeg);
+    background-image:url(../image/inscription.jpg);
     background-size:cover;
     background-repeat:no-repeat; 
     background-attachment:fixed;
