--- a/WEBISEP/design/maison.css
+++ b/WEBISEP/design/maison.css
@@ -8,10 +8,10 @@ body {
 }
 
 #content {
-	position: absolute;
-	left: 10px;
-	top: 120px;
-	right: 10px;
+  position: absolute;
+  left: 10px;
+  top: 120px;
+  right: 10px;
 }
 #title {
   text-align: center;
@@ -19,11 +19,11 @@ body {
   color: #424458;
 }
 #box {
-	/*border: 1px solid black;*/
-	display: inline-grid;
-  margin:	9px;
+  /*border: 1px solid black;*/
+  display: inline-grid;
+  margin: 9px;
   position: relative;
-	width: calc(25% - 22px);
+  width: calc(25% - 22px);
 }
 #addRoom {
   display: inline-grid;
@@ -42,30 +42,30 @@ body {
 
 #top {
   height:50px;
-	width: 100%;	
-	/*border: 1px solid black;*/
-	box-shadow: rgba(0,0,0,0.1) 0 5px 15px;
+  width: 100%;  
+  /*border: 1px solid black;*/
+  box-shadow: rgba(0,0,0,0.1) 0 5px 15px;
   position: relative;
   background-color: #cfcfcf;
 }
 #pièce {
-	width: 50%;
-	/*border: 1px solid black;*/
-	text-align: left;
-	float: left;
-	height: 33px;
-	padding: 15px 0 0 10px;
+  width: 50%;
+  /*border: 1px solid black;*/
+  text-align: left;
+  float: left;
+  height: 33px;
+  padding: 15px 0 0 10px;
 }
 #info {
   float: right;
   padding-right: 5px;
 }
-#temp, #light {
-	/*border: 1px solid black;*/
-	display: inline-block;
-	height: 33px;
-	vertical-align: middle;
-	padding: 15px 0 0;
+#temp, #light, #captor{
+  /*border: 1px solid black;*/
+  display: inline-block;
+  height: 33px;
+  vertical-align: middle;
+  padding: 15px 0 0;
 }
 #light {
   width: 25px;
@@ -73,6 +73,17 @@ body {
 #temp {
   width: 40px;
 }
+#captor{
+  width: 50px;
+}
+.report_problem{
+  position: absolute;
+  right: 25px;
+  top: 14px;
+  color: black;
+}
+
+
 #box input[type=checkbox] {
   display: none;
 } 
@@ -102,29 +113,29 @@ body {
         border-left-color: inherit;
 }
 #bot {
-	position: relative;
-	height: auto;	
-	/*border: 1px solid black;*/
+  position: relative;
+  height: auto; 
+  /*border: 1px solid black;*/
 }
 #control {
-	/*border: 1px solid black;*/
-	display: inline-grid;
-	width: 80%;
-	padding-top: 5px;
-	height: calc(100% - 38px);
+  /*border: 1px solid black;*/
+  display: inline-grid;
+  width: 80%;
+  padding-top: 5px;
+  height: calc(100% - 38px);
 }
 #control div {
-	/*border: 1px solid black;*/
-	position: relative;
-	
+  /*border: 1px solid black;*/
+  position: relative;
+  
 }
 
 #control div p {
-	display: inline-block;
-	margin-top: 0;
-	text-align: left;
-	padding-top: 1px;
-	padding-left: 20%;
+  display: inline-block;
+  margin-top: 0;
+  text-align: left;
+  padding-top: 1px;
+  padding-left: 20%;
 }
 #options {
   display: inline-grid;
